
- adapt to VDR 1.3.42-1.4.0, oldest supported is now 1.3.42 (Ville Skyttä)
- clean up leftovers from the image grab code removal in 0.2.5 (Ville Skyttä)
- add Czech i18n placeholders (Ville Skyttä)
- be less noisy about audio mode (non-)changes (Ville Skyttä)
- add work-in-progress AC3 patch to patches/ (Agneau Egare, Ville Skyttä)
- use VDR's thread activity control features instead of our own (Luca Olivetti)

2007-05-08: Version 0.2.7

- add Polish translation (Mikolaj Tutak)
- sync "make install" with VDR 1.4.2-2 (Ville Skyttä)
- use cCondWait::SleepMs() instead of usleep (Ville Skyttä)
- avoid deprecation warnings with newish libavcodec (Ville Skyttä)
- add brightness/contrast/saturation settings to setup (Ville Skyttä)
- apply more settings immediately from setup menu (Ville Skyttä)
- apply AC3 and WSS patches which were in patches/ in previous releases
- add setup option for enabling/disabling WSS (Ville Skyttä)
- various minor tweaks

2008-04-06: Version 0.2.8

- Fix build with ffmpeg >= ~2007-07 (Ville Skyttä)
- Fix build with VDR >= 1.5.9 (Ville Skyttä)
- Drop support for VDR < 1.4.0 (Ville Skyttä)
- Implement OSD level for VDR >= 1.5.9 (Luca Olivetti)
- Fix subtitles for VDR >= 1.5.11 (Luca Olivetti, Sami Sundell)
- Include VDR 1.6+ subtitle hack patch in patches/ (Luca Olivetti)

2009-01-02: Version 0.2.9

- Update Italian translation (Diego Pierotto)
- Error handling improvements (Ville Skyttä)
- Add SVDRP commands for device release/reopen, audio output settings,
  brightness/contrast/saturation (Krzysztof Parma, Ville Skyttä)
- Switch to VDR 1.6's i18n system (Ville Skyttä)
- Drop support for VDR < 1.6.0 (Ville Skyttä)

200x-xx-xx: Version x.x.x

- Apply brightness/contrast/saturation configuration settings when configuring
  the device, e.g. on VDR startup (Ville Skyttä)
- Error handling improvements (Ville Skyttä)
- Add French translation (#55, Michaël Nival)
- Better defaults for FFmpeg and EM8300 in Makefile (#53, Ville Skyttä,
  Michaël Nival).