@@ -72,7 +72,7 @@ DEFINES += -DUSE_XINE_SCALER
 
 OBJS = $(PLUGIN).o dxr3multichannelaudio.o dxr3sysclock.o dxr3colormanager.o \
 	dxr3syncbuffer.o dxr3audiodecoder.o dxr3blackframe.o dxr3audio.o \
-	dxr3pesframe.o dxr3demuxdevice.o dxr3configdata.o dxr3ffmpeg.o \
+	dxr3pesframe.o dxr3demuxdevice.o dxr3configdata.o \
 	dxr3interface_spu_encoder.o dxr3interface.o dxr3device.o \
 	dxr3output.o dxr3output-video.o dxr3output-audio.o dxr3osd.o dxr3spudecoder.o \
 	dxr3audio-oss.o dxr3audio-alsa.o
